# simple-fuzzy-finder

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: fuzzy_find.cpp
src/headers/: fuzzy_find.h
